--- a/CH10注意力机制/10.4_Bahdanau 注意力.ipynb
+++ b/CH10注意力机制/10.4_Bahdanau 注意力.ipynb
@@ -43,13 +43,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
-   "source": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from d2l import torch as d2l"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 10.4.2. 定义注意力解码器\n",
+    "面我们看看如何定义Bahdanau注意力，实现循环神经网络编码器-解码器。 其实，我们只需重新定义解码器即可。 为了更方便地显示学习的注意力权重， 以下AttentionDecoder类定义了带有注意力机制解码器的基本接口。"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "class AttentionDecoder(d2l.Decoder):\n",
+    "    def __init__(self):\n",
+    "        super(AttentionDecoder, self).__init__()\n",
+    "    @property\n",
+    "    def attention_weights(self):\n",
+    "        raise NotImplemented"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "我们接下来"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
